--- a/public/styles.css
+++ b/public/styles.css
@@ -135,18 +135,32 @@ header #fond_image{
 
 /* -------- Page 6 -------- */ 
 
-#formulaire {
+#formulaire { 
     display : flex;
-    flex-direction: row;
+    flex-direction: row; 
 } 
 
-.contact { 
-    text-align : justify; 
-    margin-right : 3px; 
-    width : 180%;
+.texte { 
+    margin-right : 50px; 
 }
 
-/* -------- Bas de page -------- */
+#contact { 
+    margin-top : 0px; 
+    margin-left : 50px; 
+    text-align : justify; 
+    margin-right : 3px; 
+} 
+
+#email {
+    margin-top : 5px; 
+}
+
+#message { 
+    margin-top : 5px; 
+    padding-top : 0px; 
+}
+
+/* -------- Bas de page -------- */ 
 
 footer{
     border-top: solid black 10px;
