--- a/public/styles.css
+++ b/public/styles.css
@@ -130,22 +130,25 @@ header #fond_image{
 /* -------- Page 3 -------- */ 
 
 #personne1, #personne2 { 
-    background-color : #6e608a; 
+    background-color : #403584;  
     border-radius : 30px 30px 30px 30px; 
     margin-left : 5px; 
     width : 450px;  
-    height : 250px;  
+    height : 300px;  
+    margin-top : 0px; 
 } 
 
 #personne1 h2, #personne2 h2 {
     border-bottom : solid 0px black; 
     margin-bottom : 0px; 
     margin-left : 10px; 
+    font-size : 25px; 
+
 } 
 
 #personne1 h3, #personne2 h3 {
     border-bottom : solid 0px black; 
-    font-size : 25px; 
+    font-size : 10px; 
     margin-bottom : 0px; 
 } 
 
@@ -175,15 +178,18 @@ header #fond_image{
     text-align : center; 
 } 
 
+
 #personne2 {
-    margin-left : 30%; 
-    margin-top : 10%; 
+    margin-left : 60%; 
 } 
 
-#contenu_page3 {
+#contenu_note {
     display : flex; 
 }
 
+#contenu_page3 {
+    display : flex; 
+} 
 
 /* -------- Page 4 -------- */
 
@@ -209,6 +215,7 @@ header #fond_image{
 
 #email {
     margin-top : 5px; 
+    flex-direction : column; 
 }
 
 #message { 
