--- a/public/styles.css
+++ b/public/styles.css
@@ -128,7 +128,7 @@ h1, h2, h3{
 
 #page table {
     border-collapse : collapse; 
-    border-bottom : 6px solid black; 
+    border : 2px solid black; 
 } 
 
 #page td {
@@ -239,7 +239,16 @@ h1, h2, h3{
 
 /* -------- Page 5 -------- */
 
+#grey_square{
+    background-color: rgb(207, 207, 207);
+    border-radius: 7px;
+    padding: 2px 8px 2px;
+    font-family: "JosefinSans-Medium", sans-serif;;
+}
 
+#grey_square > p {
+    font-weight: bold;
+}
 
 /* -------- Page 6 -------- */ 
 
