--- a/public/styles.css
+++ b/public/styles.css
@@ -319,7 +319,7 @@ button:hover{
     margin-left : 10px; 
 }
 
-#personne1 cite, #personne2 cite { 
+#personne1 cite, #personne2 cite {
     margin-bottom : 10px;  
     text-align : center; 
 } 
@@ -341,33 +341,33 @@ button:hover{
     display : flex;
 }
 
+#tableau p { 
+    margin-top : 0px; 
+    text-align : center; 
+}
+
 #premierecase {
     background-color : #584CE3; 
+    width : 300px;  
 } 
+
+#premierecase p { 
+    margin-top : 30px; 
+}
 
 #ingenieur {
     background-color : rgb(28, 204, 28); 
-    margin-top : 0px; 
-    padding-top : 0px; 
-    height : 30px; 
+    width : 200px; 
+    height : 50px;  
 } 
 
-#licenseinformatique { 
-    background-color : rgb(10, 134, 10); 
+#ingenieur p { 
     margin-top : 0px; 
-    height : 30px; 
-} 
-
-#licenseprofessionnelle { 
-    background-color : rgb(206, 22, 22); 
-    margin-top : 0px; 
-    height : 30px; 
-} 
+}
 
 #masterinformatique { 
     background-color : rgb(9, 148, 9); 
-    margin-top : 0px; 
-    height : 30px;  
+    height : 50px;  
 }
 /* -------- Page 4 -------- */
 
