--- a/public/styles.css
+++ b/public/styles.css
@@ -41,6 +41,7 @@ header #fond_bleu p{
     font-family:"NEONLEDLight", sans-serif;
     text-transform: uppercase;
     color: white;
+    text-shadow: white 1px 0 10px;
     
 }
 
@@ -76,16 +77,23 @@ header #fond_image{
     color: white;
     font-family: 'Lucida Console', sans-serif;
     font-size: 15px;
+    text-shadow: white 1px 0 10px;
 }
 
 #header nav a:hover{
     color: red;
+    text-shadow: red 1px 0 10px;
 }
 
 /* ------- Ensemble des pages ------- */
 
-#contenu_page{
+#sommaire{
     margin: 40px 30px 0px;
+    padding: 20px 30px 20px;
+}
+
+#contenu_page{
+    margin: 40px 30px 40px;
     padding: 20px 30px 30px;
 }
 
@@ -93,8 +101,8 @@ header #fond_image{
     --Taillebordure: 4px;
     position: relative;
     background-color: black;
-    border-top-left-radius: var(--Taillebordure);
-    border-top-right-radius: var(--Taillebordure);
+    border-radius: var(--Taillebordure);
+    box-shadow: 0px 0px 6px 3px white;
 }
 
 .bordure:after {
@@ -107,8 +115,7 @@ header #fond_image{
     background: linear-gradient(
         60deg,red, orange, yellow, green, blue, indigo, purple);
     z-index: -1;
-    border-top-left-radius: calc(2 * var(--Taillebordure));
-    border-top-right-radius: calc(2 * var(--Taillebordure));
+    border-radius: calc(2 * var(--Taillebordure));
     animation: bordureanime 2s ease alternate infinite;
     background-size: 300% 300%;
 }
@@ -123,6 +130,16 @@ header #fond_image{
 	100% {
 		background-position: 0% 50%;
 	}
+}
+
+#sommaire ul a{
+    text-decoration: none;
+    color: white;
+    font-family: "JosefinSans-Medium", sans-serif;
+}
+
+#sommaire ul a:hover{
+    color: red;
 }
 
 #contenu_page p{
@@ -140,6 +157,7 @@ header #fond_image{
 
 h1, h2, h3{
     font-family: "JosefinSans-Light", sans-serif;
+    text-shadow: white 1px 0 10px;
 }
 
 label {
@@ -427,6 +445,7 @@ button:hover{
     padding: 20px;
     align-items: flex-start;
     color: white;
+    box-shadow: 0px 0px 6px 2px white;
 }
 
 #case1 .nom, #case2 .nom{
@@ -461,7 +480,8 @@ button:hover{
     border: white 2px solid;
     border-radius: 7px;
     padding: 2px 8px 2px;
-    font-family: "JosefinSans-Medium", sans-serif;;
+    font-family: "JosefinSans-Medium", sans-serif;
+    box-shadow: 0px 0px 6px 2px white;
 }
 
 #square > p {
