--- a/public/styles.css
+++ b/public/styles.css
@@ -432,6 +432,22 @@ button:hover{
 
 #deuxsempresentiels { 
     display : flex; 
+} 
+
+#page_professionnels { 
+    background-color : rgb(214, 214, 16); 
+    text-align : center; 
+    font-family: "JosefinSans-Light", sans-serif;
+    text-shadow: white 1px 0 10px; 
+} 
+
+button { 
+    background-color : white; 
+} 
+
+#page_professionnels a { 
+    text-decoration : none; 
+    color : black; 
 }
 
 /* -------- Page 4 -------- */
