--- a/public/styles.css
+++ b/public/styles.css
@@ -248,6 +248,17 @@ button:hover{
     text-shadow: none;
 }
 
+#fleche{
+    position: fixed;
+        right: 15px;
+        top: 15px;
+}
+
+#fleche img{
+    width: 50px;
+    height: 50px;
+}
+
 /* -------- Page 1 -------- */
 
 #accueil_contenu h1{
