--- a/public/styles.css
+++ b/public/styles.css
@@ -523,6 +523,20 @@ button:hover{
     font-weight: bold;
 }
 
+#iut_images{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0px 0px 25px;
+}
+
+#iut_images img{
+    margin: 0px 20px 0px;
+    border-radius: 4px;
+    border: 4px solid white;
+    box-shadow: 0px 0px 6px 2px white;
+}
+
 /* -------- Page 6 -------- */ 
 
 #formulaire { 
