--- a/public/styles.css
+++ b/public/styles.css
@@ -88,7 +88,7 @@ header #fond_image{
 /* ------- Ensemble des pages ------- */
 
 #contenu_page, #sommaire{
-    margin: 40px 300px 40px;
+    margin: 40px 200px 40px;
     padding: 20px 30px 30px;
 }
 
@@ -539,8 +539,8 @@ button:hover{
 #iut_images img{
     margin: 0px 20px 0px;
     border-radius: 4px;
-    border: 4px solid white;
-    box-shadow: 0px 0px 6px 2px white;
+    border: 4px solid yellowgreen;
+    box-shadow: 0px 0px 6px 2px yellowgreen;
 }
 
 /* -------- Page 6 -------- */ 
