--- a/public/styles.css
+++ b/public/styles.css
@@ -428,7 +428,7 @@ button:hover{
 }
 
 #personne1, #personne2 { 
-    border: limegreen 2px solid;
+    border: limegreen 4px solid;
     border-radius : 30px; 
     width : 60%;  
     height : 300px;
@@ -529,7 +529,7 @@ button:hover{
 /* -------- Page 4 -------- */
 
 #case1, #case2{
-    border: 2px white solid;
+    border: 4px white solid;
     border-radius: 8px;
     margin-bottom: 20px;
     display: flex;
@@ -590,8 +590,8 @@ button:hover{
 #iut_images img{
     margin: 0px 20px 0px;
     border-radius: 4px;
-    border: 4px solid yellowgreen;
-    box-shadow: 0px 0px 6px 2px yellowgreen;
+    border: 4px solid rgb(76, 76, 255);
+    box-shadow: 0px 0px 6px 2px rgb(76, 76, 255);
 }
 
 /* -------- Page 6 -------- */ 
