--- a/public/styles.css
+++ b/public/styles.css
@@ -159,10 +159,6 @@ label {
     font-family: "JosefinSans-Medium", sans-serif;
 }
 
-#input_file{
-    border:none;
-}
-
 #contact{
     width: 90%;
 }
@@ -181,6 +177,10 @@ input{
     background-color: black;
     border-radius: 5px;
     font-family: "JosefinSans-Medium", sans-serif;
+}
+
+#input_file{
+    border:none;
 }
 
 textarea{
@@ -590,8 +590,8 @@ button:hover{
 #iut_images img{
     margin: 0px 20px 0px;
     border-radius: 4px;
-    border: 4px solid rgb(76, 76, 255);
-    box-shadow: 0px 0px 6px 2px rgb(76, 76, 255);
+    border: 4px solid white;
+    box-shadow: 0px 0px 6px 2px white;
 }
 
 /* -------- Page 6 -------- */ 
