--- a/public/styles.css
+++ b/public/styles.css
@@ -73,7 +73,7 @@ header #fond_image{
 
 #header nav a{
     text-decoration: none;
-    margin: 0px 40px 0px;
+    margin: 0px 30px 0px;
     color: white;
     font-family: 'Lucida Console', sans-serif;
     font-size: 15px;
@@ -88,12 +88,12 @@ header #fond_image{
 /* ------- Commun ------- */
 
 #contenu_page, #sommaire{
-    margin: 40px 100px 40px;
+    margin: 40px 8% 40px;
     padding: 20px 30px 30px;
 }
 
 .bordure{
-    --Taillebordure: 4px;
+    --Taillebordure: 6px;
     position: relative;
     background-color: black;
     border-radius: var(--Taillebordure);
@@ -126,10 +126,13 @@ header #fond_image{
 	}
 }
 
+ul{
+    font-family: "JosefinSans-Medium", sans-serif;
+}
+
 #sommaire ul a{
     text-decoration: none;
     color: white;
-    font-family: "JosefinSans-Medium", sans-serif;
 }
 
 #sommaire ul a:hover{
@@ -715,3 +718,5 @@ footer{
     width:100px;
     height:115px;
 }
+
+@media screen and (max-width:)
