--- a/public/styles.css
+++ b/public/styles.css
@@ -47,8 +47,8 @@ header #fond_bleu p{
 
 header #fond_image{
     height: 320px;
-    background-image: url(images/21-219010_java-code.jpg);
-    background-position: left -400px;
+    background-image: url(images/circle-3.jpg);
+    background-position: left -500px;
 }
 
 #header nav{
@@ -83,6 +83,8 @@ header #fond_image{
 #header nav a:hover{
     color: red;
     text-shadow: red 1px 0 10px;
+    font-size: 25px;
+    transition: 0.5s;
 }
 
 /* ------- Commun ------- */
@@ -137,6 +139,9 @@ ul{
 
 #sommaire ul a:hover{
     color: red;
+    transition: 0.5s;
+    font-size: 20px;
+    transition: 0.5s;
 }
 
 #contenu_page p{
@@ -702,6 +707,8 @@ footer{
 #footer_texte li a:hover{
     color: red;
     text-shadow: red 1px 0 10px;
+    font-size: 18px;
+    transition: 0.5s;
 }
 
 #footer_texte p{
