--- a/public/styles.css
+++ b/public/styles.css
@@ -47,7 +47,7 @@ header #fond_bleu p{
 
 header #fond_image{
     height: 320px;
-    background-image: url(images/circle-3.jpg);
+    background-image: url(images/940b22eda6_50170334_code-informatique.jpg);
     background-position: left -500px;
 }
 
