--- a/public/styles.css
+++ b/public/styles.css
@@ -346,7 +346,8 @@ button:hover{
 }
 #premierecase {
     background-color : #584CE3; 
-    width : 300px;  
+    width : 300px;   
+	height : 160px; 
 } 
 
 #premierecase p { 
